# MLOps_tutorial

./: LICENSE  Tutorial_markdown.md  pyproject.toml  readme.md
.github/workflows/: ci.yml  publish.yml
docs/: project_guide.md
src/MLOpsDemo/: __init__.py  api.py
tests/: test_api.py
